--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
+    <script language="javascript" type="text/javascript" src="path/to/p5.sound.js"></script>
     <script src="sketch.js"></script>
   </head>
   <body>
