--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
   <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
     <script language="javascript" type="text/javascript" src="p5.sound.js"></script>
+    <script language="javascript" type="text/javascript" src="p5.dom.js"></script>
+
     <script src="sketch.js"></script>
   </head>
   <body>
