Added title and by line to html page.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 
     <script src="sketch.js"></script>
   </head>
+  <h1 style="text-align:center">Zombulator</h1>
+  <h3 style="text-align:center">By Michael Winberry</h3>
   <body>
   </body>
 </html>
